scrollbar fix

--- a/src/app/components/detail-episodes/detail-episodes.component.scss
+++ b/src/app/components/detail-episodes/detail-episodes.component.scss
@@ -109,3 +109,7 @@ option {
     justify-content: center;
     color: black
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
